--- a/Main/Properties/launchSettings.json
+++ b/Main/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "profiles": {
     "Main": {
       "commandName": "Project",
+      "commandLineArgs": "*a *b *c ¨a,b ¨b,a ¨a,c ¨c,a ¨b,c ¨c,b +a,x +a,y +b,z ^c,x ^c,y ^c,z %a,x,q,w"
+    },
+    "Backup": {
+      "commandName": "Executable",
       "commandLineArgs": "*a *b *c ¨a,b ¨b,a ¨a,c ¨c,a ¨b,c ¨c,b +a,x +a,y +b,z ^c,x ^c,y ^c,z %a,x,q,w ^c,q"
     }
   }
