Communicate through network between peers

--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssemblyName>Trustcoin.Main</AssemblyName>
     <RootNamespace>Trustcoin.Main</RootNamespace>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
