--- a/Story/Story.csproj
+++ b/Story/Story.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <LangVersion>7.1</LangVersion>
     <AssemblyName>First</AssemblyName>
     <RootNamespace>Trustcoin.Story</RootNamespace>
   </PropertyGroup>
