--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Trustcoin.Main</AssemblyName>
+    <AssemblyName>network</AssemblyName>
     <RootNamespace>Trustcoin.Main</RootNamespace>
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
